Major Changes Added storeHashes method to BloomFilter.java Added getter methods for bloomArray to BloomFilter.java Removed Main method from BloomFilter.java Added minor Javadoc to Password.java and BloomFilter.java Removed use of deprecated Boolean() constructor from Password.java Minor Workspace changes
Signed-off-by: Soumyajit Kolay <skolay@vivaldi.net>